--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -114,8 +114,8 @@
     </div>
     <div class="footer__bottom">
       <span>© «Fort Dialogue», 2023</span>
-      <a href="#" class="link">Политика конфиденциальности</a>
-      <a href="https://wptt.ru" class="link">Разработка — Вебпространство</a>
+      <a href="#" class="link link_gray">Политика конфиденциальности</a>
+      <a href="https://wptt.ru" class="link link_gray">Разработка — Вебпространство</a>
     </div>
   </div>
 </footer>
