--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -7,9 +7,9 @@
   </div>
   <div class="header__menu" id="mobile-menu">
     <nav class="header__nav">
-      <a class="link">
-        О компании
-      </a>
+      <span class="link submenu__button">
+        О компании<b>&#x25BE;</b>
+      </span>
       <a class="link" href="#">
         Решения
       </a>
@@ -22,6 +22,19 @@
       <a class="link" href="#">
         Контакты
       </a>
+      <!-- about company popup -->
+      <div class="submenu" id="sub-menu">
+        <div class="submenu__close submenu__button"></div>
+        <span class="submenu__title">О компании</span>
+        <div class="submenu__list">
+          <a href="#" class="link">О компании</a>
+          <a href="#" class="link">35 лет истории успеха</a>
+          <a href="#" class="link">Карьера</a>
+          <a href="#" class="link">Руководство</a>
+          <a href="#" class="link">Партнеры</a>
+          <a href="#" class="link">Лицензии и сертификаты</a>
+        </div>
+      </div>
     </nav>
     <a class="link" href="tel:8 (800) 000-00-00">8 (800) 000-00-00</a>
     <span class="link">Написать нам</span>
