--- a/src/styles/components/business/_footer.scss
+++ b/src/styles/components/business/_footer.scss
@@ -18,7 +18,7 @@
 		gap: 20px;
 
 		@include desktop_huge {
-			grid-template-columns: 20% 80%;
+			grid-template-columns: 20% calc(80% - 20px);
 		}
 
 		@include tablet {
@@ -153,6 +153,7 @@
 
 		span {
 			@include regular-16;
+			color: $gray20;
 		}
 
 		.link {
