--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,6 +27,7 @@
 
 @import 'components/business/header';
 @import 'components/business/menu';
+@import 'components/business/submenu';
 @import 'components/business/footer';
 @import 'components/business/title';
 @import 'components/business/map';
