--- a/src/styles/components/business/_header.scss
+++ b/src/styles/components/business/_header.scss
@@ -71,10 +71,11 @@
 			flex-direction: column;
 			gap: 10px;
 			justify-content: flex-start;
-			max-height: 482px;
 			align-items: flex-start;
-			padding: 30px 20px;
+			padding: 30px 20px 90px 20px;
 			border: none;
+			height: fit-content;
+			background-color: $white;
 
 			&.active {
 				display: flex;
@@ -101,6 +102,7 @@
 			flex-grow: unset;
 			margin-bottom: 50px;
 			width: 100%;
+			max-width: unset;
 
 			@include mobile {
 				.link {
@@ -108,13 +110,17 @@
 					width: 100%;
 					position: relative;
 
-					&:after {
+					&:before {
 						content: '';
 						width: 100%;
 						position: absolute;
 						bottom: -15px;
 						left: 0;
 						border-bottom: solid 1px $gray10;
+					}
+
+					&:last-of-type::before {
+						border: none;
 					}
 				}
 			}
