--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -39,18 +39,12 @@
     <a class="link" href="tel:8 (800) 000-00-00">8 (800) 000-00-00</a>
     <span class="link">Написать нам</span>
   </div>
-  <div class="header__lang dropdown">
-    <div class="dropdown__button">
-      <span>RU</span>
-      <svg xmlns="http://www.w3.org/2000/svg" width="9" height="5" viewBox="0 0 9 5" fill="none">
-        <path d="M4.5 4.5L8.39711 0.75H0.602886L4.5 4.5Z" fill="#333333" />
-      </svg>
-    </div>
-    <ul class="dropdown__options">
-      <li class="dropdown__option">
-        <a href="#">EN</a>
-      </li>
+  <div class="header__lang">
+    <span>RU <b>&#x25BE;</b></span>
+    <ul>
+      <li><a href="#" class="link">EN</a></li>
     </ul>
+
   </div>
   <div class="header__right-bar" id="bar">
     <div class="header__burger" id="menu-button"></div>
