--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -4,6 +4,7 @@ $gray90: #1a1a1a;
 $gray80: #333333;
 $gray70: #4d4d4d;
 $gray60: #666666;
+$gray50: #808080;
 $gray40: #999999;
 $gray30: #b3b3b3;
 $gray20: #cccccc;
