--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,7 @@
 // @import 'components/ui/video';
 @import 'components/ui/tabs';
 
+@import 'components/business/breadcrumbs';
 @import 'components/business/header';
 @import 'components/business/menu';
 @import 'components/business/submenu';
@@ -44,6 +45,7 @@
 @import 'components/business/media-section';
 @import 'components/business/news-card';
 @import 'components/business/questions';
+@import 'components/business/page-title';
 
 // @import 'components/business/cookie';
 
