--- a/src/styles/components/business/_title.scss
+++ b/src/styles/components/business/_title.scss
@@ -6,6 +6,17 @@
 	}
 
 	h1 {
+		@include bold-80-uppercase;
+		color: $black;
+
+		@include tablet {
+			@include bold-40-uppercase;
+		}
+
+		@include mobile {
+			@include bold-28-uppercase;
+		}
+
 		display: flex;
 		flex-direction: column;
 
