--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,7 +11,7 @@
 @import 'components/ui/input';
 @import 'components/ui/dropdown';
 // @import 'components/ui/select';
-// @import 'components/ui/swiper';
+@import 'components/ui/swiper';
 // @import 'components/ui/close-btn';
 // @import 'components/ui/favorite';
 // @import 'components/ui/form';
@@ -46,6 +46,7 @@
 @import 'components/business/news-card';
 @import 'components/business/questions';
 @import 'components/business/page-title';
+@import 'components/business/banner';
 
 // @import 'components/business/cookie';
 
