--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,7 @@
 // @import 'components/ui/form';
 @import 'components/ui/textarea';
 // @import 'components/ui/checkbox';
-// @import 'components/ui/pagination';
+@import 'components/ui/pagination';
 // @import 'components/ui/popup';
 // @import 'components/ui/rating';
 // @import 'components/ui/timer';
@@ -47,6 +47,7 @@
 @import 'components/business/questions';
 @import 'components/business/page-title';
 @import 'components/business/banner';
+@import 'components/business/projects';
 
 // @import 'components/business/cookie';
 
