--- a/src/styles/components/business/_project-card.scss
+++ b/src/styles/components/business/_project-card.scss
@@ -1,23 +1,10 @@
 .project-card {
-	padding-bottom: 28px;
-	display: block;
+	display: grid;
+	grid-template-rows: repeat(3, max-content) auto;
 	align-items: start;
-	min-height: 612px;
-	height: 100%;
 	position: relative;
-	width: 775px;
 	overflow: hidden;
-
-	@include tablet {
-		padding-bottom: 25px;
-		width: 500px;
-	}
-
-	@include mobile {
-		max-height: 486px;
-		min-height: unset;
-		width: 320px;
-	}
+	height: 100%;
 
 	&:hover {
 		img {
@@ -31,10 +18,6 @@
 		margin-bottom: 18px;
 
 		@include tablet {
-			height: 350px;
-		}
-
-		@include mobile {
 			height: 250px;
 			margin-bottom: 20px;
 		}
@@ -45,23 +28,36 @@
 	}
 
 	h3 {
+		max-width: 707px;
 		@include transition;
 		margin-bottom: 12px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 
-		@include mobile {
+		@include tablet {
 			margin-bottom: 15px;
+			-webkit-line-clamp: 3;
 		}
 	}
 
 	p {
+		max-width: 707px;
 		overflow: hidden;
 		@include transition;
 		margin-bottom: 24px;
 		align-self: flex-start;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 
-		@include mobile {
-			max-height: 80px;
+		@include tablet {
 			margin-bottom: 40px;
+			-webkit-line-clamp: 4;
 		}
 	}
 
