--- a/src/styles/components/business/_projects-section.scss
+++ b/src/styles/components/business/_projects-section.scss
@@ -13,6 +13,7 @@
 		margin-left: 175px;
 		margin-right: 20px;
 		overflow: visible;
+		width: 775px;
 
 		@include desktop {
 			margin-left: 50px;
@@ -21,10 +22,20 @@
 		@include tablet {
 			margin-top: 40px;
 			margin-left: 20px;
+			width: 500px;
+			padding-bottom: 40px;
 		}
 
+		@include mobile {
+			width: 320px;
+		}
+	}
+
+	.swiper-slide {
+		height: 612px;
+
 		@include tablet {
-			padding-bottom: 40px;
+			height: 486px;
 		}
 	}
 
