--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,6 +48,7 @@
 @import 'components/business/page-title';
 @import 'components/business/banner';
 @import 'components/business/projects';
+@import 'components/business/error-page';
 
 // @import 'components/business/cookie';
 
