--- a/src/styles/components/ui/_swiper.scss
+++ b/src/styles/components/ui/_swiper.scss
@@ -61,6 +61,8 @@
 }
 
 .swiper-pagination {
+	bottom: 0;
+
 	.swiper-pagination-bullet {
 		width: 24px;
 		background-color: $gray80;
@@ -83,59 +85,4 @@
 		}
 	}
 }
-
-// .swiper-navigation {
-// 	display: flex;
-// 	align-items: center;
-// 	gap: 20px;
-
-// 	& > * {
-// 		width: 50px;
-// 		height: 50px;
-// 		display: flex;
-// 		justify-content: center;
-// 		align-items: center;
-// 		background-color: $white;
-// 		border: 1px solid $black25;
-// 		transition: background-color $transitionDuration ease-in-out;
-
-// 		&:hover {
-// 			cursor: pointer;
-// 			background-color: $black25;
-
-// 			&:after {
-// 				content: url('@icons/chevron_white.svg');
-// 			}
-// 		}
-
-// 		&::after {
-// 			content: url('@icons/chevron.svg');
-// 			width: 24px;
-// 			height: 24px;
-// 		}
-
-// 		&.swiper-button-disabled {
-// 			border-color: $grayB9;
-// 			pointer-events: none;
-
-// 			&:hover {
-// 				cursor: auto;
-// 			}
-
-// 			&::after {
-// 				content: url('@icons/chevron_disabled.svg');
-// 			}
-// 		}
-// 	}
-
-// 	&_transparent > * {
-// 		background-color: transparent;
-// 	}
-
-// 	&-prev {
-// 		&::after {
-// 			transform: rotate(180deg);
-// 		}
-// 	}
-// }
 
