--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,12 +24,14 @@
 @import 'components/ui/accordion';
 // @import 'components/ui/video';
 @import 'components/ui/tabs';
+@import 'components/ui/list';
 
 @import 'components/business/breadcrumbs';
 @import 'components/business/header';
 @import 'components/business/menu';
 @import 'components/business/submenu';
 @import 'components/business/footer';
+@import 'components/business/index-page';
 @import 'components/business/title';
 @import 'components/business/map';
 @import 'components/business/numbers';
@@ -48,7 +50,8 @@
 @import 'components/business/page-title';
 @import 'components/business/banner';
 @import 'components/business/projects';
-@import 'components/business/error-page';
+@import 'components/business/task';
 
+@import 'components/business/error-page';
 // @import 'components/business/cookie';
 
