--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -185,6 +185,17 @@
 	text-transform: uppercase;
 }
 
+@mixin medium-48 {
+	font-size: 48px;
+	font-weight: 500;
+}
+
+@mixin medium-48-uppercase {
+	font-size: 48px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
 @mixin medium-32 {
 	font-size: 32px;
 	font-weight: 500;
@@ -280,6 +291,11 @@
 
 @mixin regular-30 {
 	font-size: 30px;
+	font-weight: 400;
+}
+
+@mixin regular-28 {
+	font-size: 28px;
 	font-weight: 400;
 }
 
