--- a/src/styles/components/business/_services-section.scss
+++ b/src/styles/components/business/_services-section.scss
@@ -17,7 +17,7 @@
 		}
 
 		span:not(.children) {
-			@include bold-60-uppercase;
+			font-weight: inherit;
 			color: $white;
 			display: flex;
 			align-items: center;
@@ -35,28 +35,12 @@
 				flex-direction: column;
 				align-items: flex-start;
 			}
-
-			@include tablet {
-				@include bold-30-uppercase;
-			}
-
-			@include mobile {
-				@include bold-20-uppercase;
-			}
 		}
 
 		b {
-			@include bold-60-uppercase;
+			font-weight: inherit;
 			color: $green50;
 			white-space: nowrap;
-
-			@include tablet {
-				@include bold-30-uppercase;
-			}
-
-			@include mobile {
-				@include bold-20-uppercase;
-			}
 		}
 
 		.btn {
