add services page

--- a/src/styles/components/business/_index-page.scss
+++ b/src/styles/components/business/_index-page.scss
@@ -5,6 +5,14 @@
 		b {
 			font-size: inherit;
 		}
+
+		@include tablet {
+			@include medium-30-uppercase;
+		}
+
+		@include mobile {
+			@include medium-20-uppercase;
+		}
 	}
 
 	.project-section {
