--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,6 +51,7 @@
 @import 'components/business/banner';
 @import 'components/business/projects';
 @import 'components/business/task';
+@import 'components/business/services';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
