add service=detail page

--- a/src/styles/components/business/_services-section.scss
+++ b/src/styles/components/business/_services-section.scss
@@ -50,6 +50,19 @@
 		}
 	}
 
+	&_secondary {
+		.container {
+			display: flex;
+			justify-content: space-between;
+
+			@include tablet {
+				.btn {
+					display: none;
+				}
+			}
+		}
+	}
+
 	&__swiper {
 		margin-top: 80px;
 		margin-left: 175px;
