--- a/src/styles/components/ui/_swiper.scss
+++ b/src/styles/components/ui/_swiper.scss
@@ -1,3 +1,27 @@
+.swiper-component {
+	overflow: visible;
+	padding-bottom: 80px;
+
+	@include tablet {
+		padding-bottom: 40px;
+	}
+
+	.swiper-slide {
+		width: 775px;
+		height: 478px;
+
+		@include tablet {
+			width: 500px;
+			height: 312px;
+		}
+
+		@include mobile {
+			width: 320px;
+			height: 197px;
+		}
+	}
+}
+
 .swiper-button-prev {
 	height: 51px !important;
 	width: 51px !important;
