--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,8 @@
 @import 'components/business/projects';
 @import 'components/business/task';
 @import 'components/business/services';
+@import 'components/business/service-detail';
+@import 'components/business/enumeration';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
