--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -158,6 +158,12 @@
 	font-weight: 700;
 }
 
+@mixin bold-16-uppercase {
+	font-size: 16px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
 @mixin bold-16 {
 	font-size: 16px;
 	font-weight: 700;
