--- a/src/styles/components/business/_service-detail.scss
+++ b/src/styles/components/business/_service-detail.scss
@@ -45,5 +45,21 @@
 			margin-top: 40px;
 		}
 	}
+
+	&__subtitle {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+
+		@include desktop_extra_small {
+			b {
+				color: $green50;
+			}
+
+			span {
+				display: none;
+			}
+		}
+	}
 }
 
