add solution-detail page

--- a/src/styles/components/ui/_tabs.scss
+++ b/src/styles/components/ui/_tabs.scss
@@ -28,10 +28,10 @@
 }
 
 .tab-content {
-	display: none;
+	display: none !important;
 
 	&.active {
-		display: grid;
+		display: grid !important;
 	}
 }
 
