--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -56,6 +56,8 @@
 @import 'components/business/enumeration';
 @import 'components/business/solution-detail';
 @import 'components/business/media-component';
+@import 'components/business/about-company';
+@import 'components/business/quote-section';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
