--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -58,6 +58,7 @@
 @import 'components/business/media-component';
 @import 'components/business/about-company';
 @import 'components/business/quote-section';
+@import 'components/business/career';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
