--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -41,6 +41,20 @@
 		filter: brightness(50%);
 	}
 
+	img {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: brightness(50%);
+	}
+
 	h2 {
 		color: $white;
 		max-width: 700px;
@@ -56,6 +70,22 @@
 
 		@include mobile {
 			@include regular-16;
+		}
+	}
+
+	&_secondary {
+		&::after {
+			content: '';
+			width: 100%;
+			height: 125px;
+			position: absolute;
+			bottom: -125px;
+			background-color: #1a1a1a;
+			z-index: -1;
+		}
+
+		.container {
+			grid-template-rows: minmax(0, 120px) auto auto;
 		}
 	}
 
