--- a/src/styles/components/business/_enumeration.scss
+++ b/src/styles/components/business/_enumeration.scss
@@ -1,6 +1,6 @@
 .enumeration {
 	&__item {
-		padding: 40px 0 60px 0;
+		padding: 40px 0 40px 0;
 		border-top: solid 1px $gray10;
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
@@ -25,12 +25,6 @@
 					@include bold-16-uppercase;
 				}
 			}
-		}
-	}
-
-	.accordion__list {
-		@include min_tablet {
-			gap: 40px !important;
 		}
 	}
 
@@ -65,6 +59,10 @@
 			gap: 15px !important;
 			height: unset !important;
 			max-height: unset !important;
+
+			.list {
+				margin-bottom: 20px;
+			}
 		}
 	}
 	.accordion__item_active {
