--- a/src/styles/components/business/_numbers.scss
+++ b/src/styles/components/business/_numbers.scss
@@ -48,6 +48,7 @@
 			height: 100%;
 			display: flex;
 			flex-direction: column;
+			gap: 25px;
 			justify-content: space-between;
 
 			@include mobile {
