--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -59,6 +59,7 @@
 @import 'components/business/about-company';
 @import 'components/business/quote-section';
 @import 'components/business/career';
+@import 'components/business/documents';
 @import 'components/business/employees';
 
 @import 'components/business/error-page';
