--- a/src/styles/components/business/_media-component.scss
+++ b/src/styles/components/business/_media-component.scss
@@ -17,5 +17,106 @@
 			max-height: 400px;
 		}
 	}
+
+	&_secondary {
+		grid-template-columns: repeat(2, 1fr) !important;
+
+		img {
+			max-height: 300px !important;
+		}
+		.news-card {
+			padding-top: 0;
+
+			img {
+				display: none;
+			}
+		}
+
+		@include tablet_small {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+
+			.news-card {
+				padding: 0 0 20px 0;
+				gap: 0;
+
+				img {
+					margin-bottom: 20px;
+				}
+
+				.news-card__date {
+					margin-bottom: 24px;
+				}
+
+				h3 {
+					margin-bottom: 15px;
+				}
+
+				p {
+					margin-bottom: 40px;
+				}
+			}
+
+			.news-card:nth-child(n + 4) {
+				display: none;
+			}
+		}
+
+		.news-card:nth-child(1),
+		.news-card:nth-child(6),
+		.news-card:nth-child(7) {
+			border: none;
+			background-color: $gray04;
+			padding: 0 0 24px 0;
+
+			@include tablet_small {
+				padding: 0 0 20px 0;
+
+				.news-card__date {
+					margin-bottom: 16px;
+				}
+
+				h3 {
+					margin-bottom: 10px;
+				}
+
+				p {
+					margin-bottom: 30px;
+				}
+			}
+
+			div,
+			h3,
+			p,
+			a {
+				margin-left: 38px;
+				margin-right: 38px;
+
+				@include tablet {
+					margin-left: 20px;
+					margin-right: 20px;
+				}
+			}
+
+			img {
+				display: block;
+			}
+		}
+
+		.news-card:nth-child(1) {
+			grid-row: 1 / 3;
+		}
+
+		.news-card:nth-child(6) {
+			grid-row: 3 / 5;
+			grid-column: 2;
+		}
+
+		.news-card:nth-child(7) {
+			grid-row: 5 / 7;
+			grid-column: 1;
+		}
+	}
 }
 
