--- a/src/styles/components/business/_media-section.scss
+++ b/src/styles/components/business/_media-section.scss
@@ -25,11 +25,119 @@
 			right: 175px;
 			top: 150px;
 		}
+
 		@include min_mobile {
 			margin: 0;
 			top: 80px;
 			right: 55px;
 			position: absolute;
+		}
+	}
+
+	&_secondary {
+		padding-top: 0;
+
+		@include tablet {
+			padding-top: 0;
+		}
+
+		.pagination {
+			margin-top: 50px;
+
+			.btn {
+				position: unset;
+				margin: 0;
+			}
+		}
+
+		.media-component_secondary {
+			@include tablet_small {
+				.news-card:nth-child(n + 4) {
+					display: unset;
+				}
+
+				.news-card:nth-child(1),
+				.news-card:nth-child(4n) {
+					border: none;
+					background-color: $gray04;
+					padding: 0 0 24px 0;
+
+					@include tablet_small {
+						padding: 0 0 20px 0;
+
+						.news-card__date {
+							margin-bottom: 16px;
+						}
+
+						h3 {
+							margin-bottom: 10px;
+						}
+
+						p {
+							margin-bottom: 30px;
+						}
+					}
+
+					div,
+					h3,
+					p,
+					a {
+						margin-left: 38px;
+						margin-right: 38px;
+
+						@include tablet {
+							margin-left: 20px;
+							margin-right: 20px;
+						}
+					}
+
+					img {
+						display: block;
+					}
+				}
+
+				.news-card:nth-child(6),
+				.news-card:nth-child(7) {
+					border-bottom: solid 1px $gray20;
+					background-color: unset;
+					padding: 24px 20px;
+
+					@include tablet {
+						padding: 30px 0;
+					}
+
+					@include tablet_small {
+						.news-card__date {
+							margin-bottom: 24px;
+						}
+
+						h3 {
+							margin-bottom: 15px;
+						}
+
+						p {
+							margin-bottom: 40px;
+						}
+					}
+
+					div,
+					h3,
+					p,
+					a {
+						margin-left: 0;
+						margin-right: 0;
+
+						@include tablet {
+							margin-left: 0;
+							margin-right: 0;
+						}
+					}
+
+					img {
+						display: none;
+					}
+				}
+			}
 		}
 	}
 }
