add page massmedia

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,6 +63,8 @@
 @import 'components/business/employees';
 @import 'components/business/events-section';
 @import 'components/business/event-card';
+@import 'components/business/massmedia-section';
+@import 'components/business/massmedia-card';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
