--- a/src/styles/components/business/_form.scss
+++ b/src/styles/components/business/_form.scss
@@ -33,6 +33,19 @@
 		}
 	}
 
+	&_secondary {
+		@include tablet {
+			position: absolute;
+			width: 100%;
+			right: unset;
+		}
+
+		@include mobile {
+			padding: 80px 20px;
+			gap: 10px;
+		}
+	}
+
 	&__row {
 		display: flex;
 		gap: 20px;
