--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,6 +65,7 @@
 @import 'components/business/event-card';
 @import 'components/business/massmedia-section';
 @import 'components/business/massmedia-card';
+@import 'components/business/media-detail';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
