add page contacts

--- a/src/html/components/business/_yandex-map.html
+++ b/src/html/components/business/_yandex-map.html
@@ -1,6 +1,9 @@
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=a4d44cf3-d646-4c31-be91-2de47fe7de39"
+	type="text/javascript"></script>
 <script type="text/javascript">
 
 	if (document.getElementById('yandex-map') !== null) {
+		ymaps = window.ymaps;
 		function init() {
 			let map = new ymaps.Map('yandex-map', {
 				center: [54.738435, 55.983600],
@@ -19,5 +22,5 @@
 		}
 		ymaps.ready(init);
 	};
-	
+
 </script>
