--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -66,6 +66,8 @@
 @import 'components/business/massmedia-section';
 @import 'components/business/massmedia-card';
 @import 'components/business/media-detail';
+@import 'components/business/contacts';
+@import 'components/business/contacts-map';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
