--- a/src/styles/components/business/_partners.scss
+++ b/src/styles/components/business/_partners.scss
@@ -1,29 +1,58 @@
 .partners {
-	.swiper-wrapper {
-		transition-timing-function: linear;
+	padding-bottom: 140px;
+
+	@include tablet {
+		padding-bottom: 80px;
 	}
 
-	.swiper-slide {
-		width: 233px;
-		height: 115px;
-		padding: 16px;
+	&__cards {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 20px;
+		margin-bottom: 50px;
+
+		@include tablet {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@include mobile {
+			grid-template-columns: 1fr;
+		}
+	}
+
+	&__card {
+		background-color: $gray04;
+		padding: 30px;
+		display: grid;
+		grid-template-rows: 200px 257px;
+
+		@include mobile {
+			padding: 30px 20px 34px 20px;
+			grid-template-rows: auto;
+		}
+	}
+
+	&__card-image {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border: solid 1px $gray10;
+		border-bottom: solid 1px $gray30;
+		padding-bottom: 30px;
+	}
 
-		@include mobile {
-			width: 128px;
-			height: 63px;
+	&__card-text {
+		padding-top: 30px;
+		display: grid;
+		grid-template-rows: max-content auto auto;
+		gap: 16px;
+
+		p {
+			max-height: 140px;
+			overflow: hidden;
 		}
 
-		img {
-			object-fit: contain;
-
-			@include min_mobile {
-				width: unset;
-				height: unset;
-			}
+		span {
+			align-self: flex-end;
 		}
 	}
 }
