add partner-detail page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,6 +70,7 @@
 @import 'components/business/contacts';
 @import 'components/business/contacts-map';
 @import 'components/business/partners';
+@import 'components/business/partner-detail';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
