--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -224,6 +224,17 @@
 	text-transform: uppercase;
 }
 
+@mixin medium-28 {
+	font-size: 28px;
+	font-weight: 500;
+}
+
+@mixin medium-28-uppercase {
+	font-size: 28px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
 @mixin medium-24 {
 	font-size: 24px;
 	font-weight: 500;
