add privacy page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -71,6 +71,7 @@
 @import 'components/business/contacts-map';
 @import 'components/business/partners';
 @import 'components/business/partner-detail';
+@import 'components/business/privacy';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
