--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,6 +72,8 @@
 @import 'components/business/partners';
 @import 'components/business/partner-detail';
 @import 'components/business/privacy';
+@import 'components/business/reviews-section';
+@import 'components/business/history';
 
 @import 'components/business/error-page';
 // @import 'components/business/cookie';
