--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -39,12 +39,14 @@
     <a class="link" href="tel:8 (800) 000-00-00">8 (800) 000-00-00</a>
     <span class="link">Написать нам</span>
   </div>
-  <div class="header__lang">
-    <span>RU <b>&#x25BE;</b></span>
-    <ul>
-      <li><a href="#" class="link">EN</a></li>
-    </ul>
-
+  <div class="dropdown header__lang">
+    <div class="dropdown__button">
+      <span>RU</span>
+      <b>▾</b>
+    </div>
+    <div class="dropdown__options">
+      <a href="#" class="dropdown__option link">EN</a>
+    </div>
   </div>
   <div class="header__right-bar" id="bar">
     <div class="header__burger" id="menu-button"></div>
