--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -74,7 +74,6 @@
 @import 'components/business/privacy';
 @import 'components/business/reviews-section';
 @import 'components/business/history';
-
 @import 'components/business/error-page';
-// @import 'components/business/cookie';
+@import 'components/business/cookie';
 
